# zedcore

./: CMakeLists.txt  LICENSE.rst  README.md  client.c  main.c  server.c
header/: client.h  server.h
lib/: CMakeLists.txt  head.c  node.c  utils.c
lib/header/: err.h  head.h  node.h  utils.h
